--- a/CodingTrain/intelligent_rockets/smartRockets.html
+++ b/CodingTrain/intelligent_rockets/smartRockets.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
     <title> intelligent rockets </title>
 </head>
-<script language="javascript" type="text/javascript" src="../../p5/p5.js"></script>
+<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
 <script language="javascript" type="text/javascript" src="Population.js"></script>
 <script language="javascript" type="text/javascript" src="Rocket.js"></script>
 <script language="javascript" type="text/javascript" src="DNA.js"></script>
@@ -16,10 +16,12 @@ var count = 0;
 var lifeP;
 var target;
 
+
 var rx = 100;
 var ry = 150;
 var rw = 200;
 var rh = 10;
+var maxForce = 0.2;
 
 function setup() {
 	createCanvas(400, 300);
